Modificando index con nuevos estilos y links 1

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="sb-sidenav-menu-heading">Acciones</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseVentas" aria-expanded="false" aria-controls="collapseVentas">
-                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-dollar-sign"></i></div>
                             Ventas
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
@@ -67,24 +67,24 @@
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseProductos" aria-expanded="false" aria-controls="collapseProductos">
-                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-cubes"></i></div>
                             Productos
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="collapseProductos" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#">Ver Productos</a>
+                                <a class="nav-link" href="products.html">Ver Productos</a>
                                 <a class="nav-link" href="#">Ver Categorias</a>
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Personas</div>
                         <a class="nav-link" href="#">
-                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-person"></i></div>
                             Clientes
                         </a>
                         <a class="nav-link" href="#">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-user-chef"></i></div>
                             Colaboradores
                         </a>
                     </div>
