--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="products.html">Ver Productos</a>
-                                <a class="nav-link" href="#">Ver Categorias</a>
+                                <a class="nav-link" href="categories.html">Ver Categorias</a>
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Personas</div>
