Creacion de interfaz clients

--- a/categories.html
+++ b/categories.html
@@ -62,8 +62,8 @@
                         <div class="collapse" id="collapseVentas" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#">Realizar Venta</a>
-                                <a class="nav-link" href="#">Registro de Ventas</a>
+                                <a class="nav-link" href="vendor.html">Realizar Venta</a>
+                                <a class="nav-link" href="sales.html">Registro de Ventas</a>
                             </nav>
                         </div>
 
@@ -81,11 +81,11 @@
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Personas</div>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="clients.html">
                             <div class="sb-nav-link-icon"><i class="fa-regular fa-person"></i></div>
                             Clientes
                         </a>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="collaborators.html">
                             <div class="sb-nav-link-icon"><i class="fa-regular fa-user-chef"></i></div>
                             Colaboradores
                         </a>
