--- a/collaborators.html
+++ b/collaborators.html
@@ -62,8 +62,8 @@
                         <div class="collapse" id="collapseVentas" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#">Realizar Venta</a>
-                                <a class="nav-link" href="#">Registro de Ventas</a>
+                                <a class="nav-link" href="vendor.html">Realizar Venta</a>
+                                <a class="nav-link" href="sales.html">Registro de Ventas</a>
                             </nav>
                         </div>
 
